:sparkles: added money wallet in request of create new user.
