# public/swagger/swagger.json
@@ -91,6 +91,7 @@
                         "schema": {
                             "properties": {
                                 "name": {
+                                    "required": "[true]",
                                     "type": "string",
                                     "default": "antoino"
                                 },
@@ -113,6 +114,10 @@
                                 "password": {
                                     "type": "string",
                                     "default": "AmarElo_2"
+                                },
+                                "money": {
+                                    "type": "float",
+                                    "default": 2.22
                                 }
                             },
                             "type": "object"
