# src/Controller/User/Create/FormType.php
@@ -4,6 +4,7 @@ namespace App\Controller\User\Create;
 
 use Symfony\Component\Form\AbstractType;
 use Symfony\Component\Form\Extension\Core\Type\EmailType;
+use Symfony\Component\Form\Extension\Core\Type\NumberType;
 use Symfony\Component\Form\Extension\Core\Type\TextType;
 use Symfony\Component\Form\FormBuilderInterface;
 use Symfony\Component\OptionsResolver\OptionsResolver;
@@ -38,6 +39,9 @@ class FormType extends AbstractType
                 'constraints' => [
                     new NotBlank(),
                 ],
+            ])
+            ->add('money', NumberType::class, [
+                'required' => true,
             ])
             ->add('roles', TextType::class, [
                 'required' => true,
